# sentinel-leaf-classification

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/interim/train/: 10.csv  100.csv  101.csv  102.csv  103.csv  105.csv  106.csv  108.csv  109.csv  11.csv  110.csv  116.csv  117.csv  118.csv  12.csv  120.csv  121.csv  122.csv  123.csv  125.csv  130.csv  131.csv  132.csv  133.csv  134.csv  135.csv  138.csv  14.csv  140.csv  141.csv  143.csv  144.csv  147.csv  15.csv  153.csv  156.csv  17.csv  20.csv  21.csv  22.csv  (+50 more)
models/: ELMClassifier_study.pkl  ExtraTreesClassifier_study.pkl  HistGradientBoostingClassifier.pkl  HistGradientBoostingClassifier_study.pkl  KNeighborsClassifier_study.pkl  RandomForestClassifier_study.pkl  SGDClassifier_study.pkl  SVC_study.pkl  XGBClassifier.pkl  XGBClassifier_study.pkl
notebooks/: 0-ground-truth.ipynb  1-band-importance.ipynb  2-compositing.ipynb  3-hyperparameter-tuning.ipynb  4-generalization.ipynb
reports/: band_importance.csv  compositing.csv  generalization.csv  hyperparameter_tuning.csv  rolling_window.csv
src/slc/: data.py  features.py  models.py  visualize.py
